# ros-foxglove-bridge

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile.ros1  Dockerfile.ros1bionic  Dockerfile.ros2  Makefile  README.md  build_and_run.sh  docker-compose.yml  package.xml  ros-jazzy-maritime-control-msgs_1.16.1-0noble_amd64.deb
.devcontainer/: Dockerfile  Dockerfile.ros1  Dockerfile.ros2  devcontainer.json  setup.sh
.github/workflows/: ci.yml  monthly.yaml  publish.yml  release.yml  snap.yaml
foxglove_bridge_base/include/foxglove_bridge/: base64.hpp  callback_queue.hpp  common.hpp  foxglove_bridge.hpp  message_definition_cache.hpp  parameter.hpp  regex_utils.hpp  serialization.hpp  server_factory.hpp  server_interface.hpp  websocket_client.hpp  websocket_logging.hpp  websocket_notls.hpp  websocket_server.hpp  websocket_tls.hpp
foxglove_bridge_base/include/foxglove_bridge/test/: test_client.hpp
foxglove_bridge_base/src/: base64.cpp  foxglove_bridge.cpp  parameter.cpp  perf_test_client.cpp  perf_test_server.cpp  serialization.cpp  server_factory.cpp
foxglove_bridge_base/src/test/: test_client.cpp
foxglove_bridge_base/tests/: base64_test.cpp  serialization_test.cpp  version_test.cpp
ros1_foxglove_bridge/: ros1_foxglove_bridge.cpp
ros1_foxglove_bridge/include/foxglove_bridge/: msg_parser.hpp  param_utils.hpp  service_utils.hpp
ros1_foxglove_bridge/launch/: foxglove_bridge.launch
ros1_foxglove_bridge/src/: msg_parser.cpp  msg_parser_cli.cpp  param_utils.cpp  ros1_foxglove_bridge.cpp  ros1_foxglove_bridge_node.cpp  ros1_foxglove_bridge_nodelet.cpp  service_utils.cpp
ros1_foxglove_bridge/tests/: msg_parser_test.cpp  smoke.test  smoke_test.cpp
ros2_foxglove_bridge/: ros2_foxglove_bridge.cpp
ros2_foxglove_bridge/include/foxglove_bridge/: callback_queue.hpp  json_to_ros.hpp  message_throttler.hpp  param_utils.hpp  parameter_interface.hpp  ros2_foxglove_bridge.hpp  service_utils.hpp  utils.hpp
ros2_foxglove_bridge/include/ros2_babel_fish/: babel_fish.hpp  macros.hpp  method_invoke_helpers.hpp
ros2_foxglove_bridge/include/ros2_babel_fish/detail/: any_service_callback.hpp  babel_fish_action_client.hpp  babel_fish_action_server.hpp  babel_fish_publisher.hpp  babel_fish_service.hpp  babel_fish_service_client.hpp  babel_fish_subscription.hpp  topic.hpp
ros2_foxglove_bridge/include/ros2_babel_fish/exceptions/: babel_fish_exception.hpp
ros2_foxglove_bridge/include/ros2_babel_fish/idl/: serialization.hpp  type_support.hpp  type_support_provider.hpp
ros2_foxglove_bridge/include/ros2_babel_fish/idl/providers/: local_type_support_provider.hpp
ros2_foxglove_bridge/include/ros2_babel_fish/messages/: array_message.hpp  compound_message.hpp  message.hpp  message_type_traits.hpp  message_types.hpp  value_message.hpp
ros2_foxglove_bridge/launch/: foxglove_bridge_launch.xml
ros2_foxglove_bridge/src/: generic_client.cpp  json_to_ros.cpp  message_definition_cache.cpp  message_throttler.cpp  param_utils.cpp  parameter_interface.cpp  ros2_foxglove_bridge.cpp  ros2_foxglove_bridge_node.cpp  service_utils.cpp
ros2_foxglove_bridge/src/ros2_babel_fish/: babel_fish.cpp  logging.hpp
ros2_foxglove_bridge/src/ros2_babel_fish/detail/: babel_fish_action_client.cpp  babel_fish_publisher.cpp  babel_fish_service.cpp  babel_fish_service_client.cpp  babel_fish_subscription.cpp  topic.cpp
ros2_foxglove_bridge/src/ros2_babel_fish/idl/: serialization.cpp  type_support_provider.cpp
ros2_foxglove_bridge/src/ros2_babel_fish/idl/providers/: local_type_support_provider.cpp
ros2_foxglove_bridge/src/ros2_babel_fish/messages/: array_message.cpp  compound_message.cpp  message.cpp
ros2_foxglove_bridge/tests/: json_to_ros_test.cpp  smoke.test  smoke_test.cpp  utils_test.cpp
ros2_foxglove_bridge_sdk/include/foxglove_bridge/: common.hpp  generic_client.hpp  message_definition_cache.hpp  param_utils.hpp  parameter_interface.hpp  ros2_foxglove_bridge.hpp  utils.hpp  version.hpp.in
ros2_foxglove_bridge_sdk/include/foxglove_bridge/test/: protocol_types.hpp  test_client.hpp
ros2_foxglove_bridge_sdk/launch/: foxglove_bridge_launch.xml
ros2_foxglove_bridge_sdk/src/: generic_client.cpp  message_definition_cache.cpp  param_utils.cpp  parameter_interface.cpp  ros2_foxglove_bridge.cpp  ros2_foxglove_bridge_node.cpp
ros2_foxglove_bridge_sdk/tests/: smoke_test.cpp  utils_test.cpp
snap/: snapcraft.yaml
snap/hooks/: configure  connect-plug-configuration-read  disconnect-plug-configuration-read  install
snap/local/: config_from_content_snap.sh  launch.sh  reset_config.sh  validate_config.sh
