<?xml version="1.0"?>
<package format="3">
    <name>foxglove_bridge</name>
    <version>0.0.1</version>
    <description>ROS Foxglove Bridge</description>

    <maintainer email="contact@foxglove.dev">Foxglove</maintainer>
    <license>MIT</license>

    <url type="website">https://github.com/foxglove/ros-foxglove-bridge</url>

    <author email="contact@foxglove.dev">Foxglove</author>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <depend condition="$ROS_VERSION == 1">roslib</depend>
    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 2">ament_index_cpp</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>

    <!-- test dependencies -->
    <build_depend condition="$ROS_VERSION == 1">rostest</build_depend>
    <test_depend condition="$ROS_VERSION == 1">rosunit</test_depend>
    <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>

    <!-- common dependencies -->
    <build_depend>libssl-dev</build_depend>
    <build_depend>libwebsocketpp-dev</build_depend>
    <build_depend>nlohmann-json-dev</build_depend>

    <exec_depend>openssl</exec_depend>
    <exec_depend>websocketpp</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>
</package>
